[tool.poetry]
name = "github-notifications"
version = "0.1.0"
description = ""
authors = ["blair-jackson <blair.jackson@aaf.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
#python = "^3.13"
python = ">=3.9,<4.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
